{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 56,
  "lineage": "484f9eae-b75c-5b7f-aa5d-920d9a6a8eae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc1_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0848ceb9939d38734",
            "arn": "arn:aws:ec2:us-east-1:992382509057:elastic-ip/eipalloc-0848ceb9939d38734",
            "association_id": "eipassoc-079ff8ac48f08f529",
            "domain": "vpc",
            "id": "eipalloc-0848ceb9939d38734",
            "network_border_group": "us-east-1",
            "network_interface": "eni-025db59617d2add79",
            "private_dns": "ip-10-1-1-243.ec2.internal",
            "private_ip": "10.1.1.243",
            "public_dns": "ec2-18-233-77-205.compute-1.amazonaws.com",
            "public_ip": "18.233.77.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-1-nat-eip"
            },
            "tags_all": {
              "Name": "vpc-1-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc2_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac2cef28b8f31c23",
            "arn": "arn:aws:ec2:us-east-1:992382509057:elastic-ip/eipalloc-0ac2cef28b8f31c23",
            "association_id": "eipassoc-092dd82fbc83751de",
            "domain": "vpc",
            "id": "eipalloc-0ac2cef28b8f31c23",
            "network_border_group": "us-east-1",
            "network_interface": "eni-093cc500e5a021bc5",
            "private_dns": "ip-10-2-1-8.ec2.internal",
            "private_ip": "10.2.1.8",
            "public_dns": "ec2-13-216-84-127.compute-1.amazonaws.com",
            "public_ip": "13.216.84.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-2-nat-eip"
            },
            "tags_all": {
              "Name": "vpc-2-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-1-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:internet-gateway/igw-0a0567ad06b3c3801",
            "id": "igw-0a0567ad06b3c3801",
            "owner_id": "992382509057",
            "tags": {
              "Name": "vpc-1-igw"
            },
            "tags_all": {
              "Name": "vpc-1-igw"
            },
            "vpc_id": "vpc-0d061a8e7d72f9985"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-2-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:internet-gateway/igw-03c090a6998ce8974",
            "id": "igw-03c090a6998ce8974",
            "owner_id": "992382509057",
            "tags": {
              "Name": "vpc-2-igw"
            },
            "tags_all": {
              "Name": "vpc-2-igw"
            },
            "vpc_id": "vpc-04370c0f945213f25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc1_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0848ceb9939d38734",
            "association_id": "eipassoc-079ff8ac48f08f529",
            "connectivity_type": "public",
            "id": "nat-076941be208446523",
            "network_interface_id": "eni-025db59617d2add79",
            "private_ip": "10.1.1.243",
            "public_ip": "18.233.77.205",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d1cfd903b915e4e7",
            "tags": {
              "Name": "vpc-1-nat-eip"
            },
            "tags_all": {
              "Name": "vpc-1-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vpc1_nat_eip",
            "aws_internet_gateway.vpc-1-igw",
            "aws_subnet.vpc-1-public-subnet",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc2_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac2cef28b8f31c23",
            "association_id": "eipassoc-092dd82fbc83751de",
            "connectivity_type": "public",
            "id": "nat-038c6c00cc8c43279",
            "network_interface_id": "eni-093cc500e5a021bc5",
            "private_ip": "10.2.1.8",
            "public_ip": "13.216.84.127",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c6f0fe5149d39574",
            "tags": {
              "Name": "vpc-2-nat-eip"
            },
            "tags_all": {
              "Name": "vpc-2-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vpc2_nat_eip",
            "aws_internet_gateway.vpc-2-igw",
            "aws_subnet.vpc-2-public-subnet",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-1-private-to-vpc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e136f23a11ad6d51218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e136f23a11ad6d5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-089e8eaba6a325e25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc-1-private-route-table",
            "aws_vpc.vpc-1",
            "aws_vpc.vpc-2",
            "aws_vpc_peering_connection.vpc-1-vpc-2-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-1-public-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a0567ad06b3c3801",
            "id": "r-rtb-05f5bef86779e7b2c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05f5bef86779e7b2c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc-1-igw",
            "aws_route_table.vpc-1-public-route-table",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-1-public-to-vpc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05f5bef86779e7b2c1218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05f5bef86779e7b2c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-089e8eaba6a325e25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc-1-public-route-table",
            "aws_vpc.vpc-1",
            "aws_vpc.vpc-2",
            "aws_vpc_peering_connection.vpc-1-vpc-2-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-2-private-to-vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0064b4bc36b8a8dc23322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0064b4bc36b8a8dc2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-089e8eaba6a325e25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc-2-private-route-table",
            "aws_vpc.vpc-1",
            "aws_vpc.vpc-2",
            "aws_vpc_peering_connection.vpc-1-vpc-2-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-2-public-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03c090a6998ce8974",
            "id": "r-rtb-057c5f26f2018b98e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057c5f26f2018b98e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc-2-igw",
            "aws_route_table.vpc-2-public-route-table",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-2-public-to-vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-057c5f26f2018b98e3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057c5f26f2018b98e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-089e8eaba6a325e25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc-2-public-route-table",
            "aws_vpc.vpc-1",
            "aws_vpc.vpc-2",
            "aws_vpc_peering_connection.vpc-1-vpc-2-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc1_private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e136f23a11ad6d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-076941be208446523",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e136f23a11ad6d5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vpc1_nat_eip",
            "aws_internet_gateway.vpc-1-igw",
            "aws_nat_gateway.vpc1_nat",
            "aws_route_table.vpc-1-private-route-table",
            "aws_subnet.vpc-1-public-subnet",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc2_private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0064b4bc36b8a8dc21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-038c6c00cc8c43279",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0064b4bc36b8a8dc2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vpc2_nat_eip",
            "aws_internet_gateway.vpc-2-igw",
            "aws_nat_gateway.vpc2_nat",
            "aws_route_table.vpc-2-private-route-table",
            "aws_subnet.vpc-2-public-subnet",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-1-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:route-table/rtb-00e136f23a11ad6d5",
            "id": "rtb-00e136f23a11ad6d5",
            "owner_id": "992382509057",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-076941be208446523",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-089e8eaba6a325e25"
              }
            ],
            "tags": {
              "Name": "vpc-1-private-route-table"
            },
            "tags_all": {
              "Name": "vpc-1-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d061a8e7d72f9985"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-1-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:route-table/rtb-05f5bef86779e7b2c",
            "id": "rtb-05f5bef86779e7b2c",
            "owner_id": "992382509057",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0567ad06b3c3801",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-089e8eaba6a325e25"
              }
            ],
            "tags": {
              "Name": "vpc-1-public-route-table"
            },
            "tags_all": {
              "Name": "vpc-1-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d061a8e7d72f9985"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-2-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:route-table/rtb-0064b4bc36b8a8dc2",
            "id": "rtb-0064b4bc36b8a8dc2",
            "owner_id": "992382509057",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-038c6c00cc8c43279",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-089e8eaba6a325e25"
              }
            ],
            "tags": {
              "Name": "vpc-2-private-route-table"
            },
            "tags_all": {
              "Name": "vpc-2-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04370c0f945213f25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-2-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:route-table/rtb-057c5f26f2018b98e",
            "id": "rtb-057c5f26f2018b98e",
            "owner_id": "992382509057",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c090a6998ce8974",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-089e8eaba6a325e25"
              }
            ],
            "tags": {
              "Name": "vpc-2-public-route-table"
            },
            "tags_all": {
              "Name": "vpc-2-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04370c0f945213f25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-1-private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e35903c78764c738",
            "route_table_id": "rtb-00e136f23a11ad6d5",
            "subnet_id": "subnet-0b3f55f9d45810716"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc-1-private-route-table",
            "aws_subnet.vpc-1-private-subnet",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-1-public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0128ad29e696f6676",
            "route_table_id": "rtb-05f5bef86779e7b2c",
            "subnet_id": "subnet-0d1cfd903b915e4e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc-1-public-route-table",
            "aws_subnet.vpc-1-public-subnet",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-2-private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b85d109425ed80a9",
            "route_table_id": "rtb-0064b4bc36b8a8dc2",
            "subnet_id": "subnet-0154750d0d93fd89c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc-2-private-route-table",
            "aws_subnet.vpc-2-private-subnet",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-2-public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b780c33a1e5d0137",
            "route_table_id": "rtb-057c5f26f2018b98e",
            "subnet_id": "subnet-0c6f0fe5149d39574"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc-2-public-route-table",
            "aws_subnet.vpc-2-public-subnet",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-1-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:subnet/subnet-0b3f55f9d45810716",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3f55f9d45810716",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382509057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-1-private-subnet"
            },
            "tags_all": {
              "Name": "vpc-1-private-subnet"
            },
            "vpc_id": "vpc-0d061a8e7d72f9985"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-1-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:subnet/subnet-0d1cfd903b915e4e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1cfd903b915e4e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382509057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-1-public-subnet"
            },
            "tags_all": {
              "Name": "vpc-1-public-subnet"
            },
            "vpc_id": "vpc-0d061a8e7d72f9985"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-2-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:subnet/subnet-0154750d0d93fd89c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0154750d0d93fd89c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382509057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-2-private-subnet"
            },
            "tags_all": {
              "Name": "vpc-2-private-subnet"
            },
            "vpc_id": "vpc-04370c0f945213f25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-2-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:subnet/subnet-0c6f0fe5149d39574",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6f0fe5149d39574",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382509057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-2-public-subnet"
            },
            "tags_all": {
              "Name": "vpc-2-public-subnet"
            },
            "vpc_id": "vpc-04370c0f945213f25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:vpc/vpc-0d061a8e7d72f9985",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0fd7eecdb03dc37c8",
            "default_route_table_id": "rtb-09a9b32b581982b47",
            "default_security_group_id": "sg-06697ebd19363dc2a",
            "dhcp_options_id": "dopt-02aea8e294c247e6d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d061a8e7d72f9985",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a9b32b581982b47",
            "owner_id": "992382509057",
            "tags": {
              "Name": "vpc-1"
            },
            "tags_all": {
              "Name": "vpc-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382509057:vpc/vpc-04370c0f945213f25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0aec56e41366b14c1",
            "default_route_table_id": "rtb-0046373c8e8f91c44",
            "default_security_group_id": "sg-0499a098f01221f34",
            "dhcp_options_id": "dopt-02aea8e294c247e6d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04370c0f945213f25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0046373c8e8f91c44",
            "owner_id": "992382509057",
            "tags": {
              "Name": "vpc-2"
            },
            "tags_all": {
              "Name": "vpc-2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc-1-vpc-2-peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-089e8eaba6a325e25",
            "peer_owner_id": "992382509057",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-04370c0f945213f25",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "peering-vpc-1-vpc-2"
            },
            "tags_all": {
              "Name": "peering-vpc-1-vpc-2"
            },
            "vpc_id": "vpc-0d061a8e7d72f9985"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-1",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    }
  ]
}